# ll-connect3

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  cmake_uninstall.cmake.in  install-bazzite.sh  install.sh
kernel/: Lian_Li_SL_INFINITY.c  README.md
src/: lian_li_qt_integration.cpp  lian_li_qt_integration.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/pages/: fanprofilepage.cpp  fanprofilepage.h  lightingpage.cpp  lightingpage.h  systeminfopage.cpp
src/usb/: CMakeLists.txt  lian_li_sl_infinity_controller.h  sl_infinity_hid.cpp
src/utils/: debugutil.cpp  debugutil.h  qtdebugutil.h
src/widgets/: fancurvewidget.cpp  fancurvewidget.h  fanlightingwidget.cpp  fanlightingwidget.h
